# starbet-live

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  docker-compose.yml
backend/: Cargo.toml  (+2 more)
backend/database-layer/: Cargo.toml
backend/database-layer/migrations/2022-01-06-215400_database_schema_full/: down.sql  up.sql
backend/database-layer/src/: handlers.rs  lib.rs  models.rs  schema.rs
backend/database-layer/src/handlers/: database_connection.rs
backend/database-layer/src/models/: bet.rs  game.rs  game_match_event.rs  ticket.rs  user.rs  user_address.rs
backend/database_layer/: Cargo.toml  README.md
backend/database_layer/LATER/: data_types.rs
backend/database_layer/LATER/data_types/: db_date.rs  db_match_event.rs
backend/database_layer/examples_and_testing/: Cargo.toml
backend/database_layer/examples_and_testing/src/: game_match.rs  game_match_repo_test.rs  main.rs  seed.rs  team.rs  team_in_game.rs  team_plays_game_test.rs  user_repo_test.rs
backend/database_layer/migrations/2022-01-06-215400_database_schema_full/: down.sql  up.sql
backend/database_layer/migrations/2022-02-03-103847_create_admin/: down.sql  up.sql
backend/database_layer/src/: connection.rs  db_access.rs  db_models.rs  handlers.rs  lib.rs  models.rs  result_types.rs  schema.rs  type_storing.rs
backend/database_layer/src/db_access/: bet.rs  bet_and_ticket.rs  game.rs  game_match.rs  repo.rs  submitted_bet_and_ticket.rs  team.rs  ticket.rs  user.rs  user_address.rs
backend/database_layer/src/db_handlers/: database_connection.rs  user.rs
backend/database_layer/src/db_models/: bet.rs  game.rs  game_match.rs  game_match_event.rs  submitted_bet.rs  submitted_ticket.rs  team.rs  team_plays_game.rs  ticket.rs  user.rs  user_address.rs
backend/database_layer/src/handlers/: database_connection.rs  user.rs
backend/database_layer/src/models/: bet.rs  game.rs  game_match.rs  game_match_event.rs  team.rs  team_plays_game.rs  ticket.rs  user.rs  user_address.rs
backend/database_layer/src/type_storing/: time_handling.rs
backend/grpc_layer/: Cargo.toml  build.rs  db.md
backend/grpc_layer/examples_and_testing/: Cargo.toml
backend/grpc_layer/examples_and_testing/src/: main.rs
backend/grpc_layer/src/: handlers.rs  lib.rs  repos.rs  transform.rs
backend/grpc_layer/src/handlers/: bet.rs  bet_handler.rs  game.rs  game_handler.rs  game_match.rs  game_match_handler.rs  team.rs  ticket.rs  user.rs
backend/ws_layer/: Cargo.toml  build.rs
backend/ws_layer/examples_and_testing/: Cargo.toml
backend/ws_layer/examples_and_testing/src/: main.rs
backend/ws_layer/src/: handlers.rs  lib.rs
frontend/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  index.html  notes.txt
frontend/assets/icons/favicon/: site.webmanifest
frontend/assets/styles/: styles.css  variables.css
frontend/src/: main.rs
frontend/src/agents/: mod.rs  tickets.rs  users.rs
frontend/src/components/: footer.rs  games.rs  layout.rs  layout_no_sidebars.rs  layout_profile.rs  loading_animation.rs  mod.rs
frontend/src/components/administration/: change_match_event.rs  change_match_state.rs  create_game_form.rs  create_match_form.rs  create_team_form.rs  create_team_plays_game_form.rs  mod.rs
frontend/src/components/auth/: input.rs  input_number.rs  login_form.rs  mod.rs  registration_form.rs
frontend/src/components/header/: date_time.rs  header.rs  login_form.rs  mod.rs
frontend/src/components/latest_bets/: latest_bets.rs  mod.rs
frontend/src/components/main/: game_matches.rs  live.rs  live_matches.rs  match_item.rs  match_item_ended.rs  match_item_live.rs  match_item_upcoming.rs  matches.rs  matches_ended.rs  matches_game.rs  matches_live.rs  matches_upcoming.rs  mod.rs  results.rs  upcoming.rs
frontend/src/components/sidebars/: footer.rs  games.rs  mod.rs
frontend/src/components/ticket/: mod.rs  ticket.rs  ticket_item.rs
frontend/src/components/tickets/: mod.rs  ticket.rs  ticket_item.rs
frontend/src/components/user/: mod.rs  user_summary.rs
frontend/src/pages/: about_page.rs  administration_page.rs  contact_page.rs  live_page.rs  mod.rs  not_found.rs  privacy_policy_page.rs  profile_page.rs  profile_statistics.rs  profile_summary.rs  profile_tickets.rs  registration_page.rs  results_page.rs  upcoming_page.rs
frontend/src/services/: auth.rs  mod.rs
frontend/src/store/: games.rs  matches.rs  mod.rs  ticket.rs  users.rs
frontend/src/types/: games.rs  grpc_types.rs  matches.rs  mod.rs  router.rs  tickets.rs  users.rs
(+37 files in other folders)
