[package]
name = "frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2.78"
anyhow = "1.0.51"
serde = "1.0.130"
serde_json = "1.0.72"
yewtil = "0.4.0"
reqwest = { version = "0.11", features = [ "json" ] }
gloo = "0.6.0"
js-sys = "0.3.55"