[package]
name = "frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yewtil = "0.4.0"
yew-router = "0.16.0"
yew-agent = "0.1.0"

wasm-bindgen = "0.2.78"
wasm-logger = "0.2.0"
log = "0.4"
anyhow = "1.0.51"

serde = "1.0.130"
serde_json = "1.0.72"
chrono = "0.4.19"

reqwest = { version = "0.11", features = [ "json", "rustls" ] }
gloo = "0.6.0"
js-sys = "0.3.55"
web-sys = "0"
prost = "0"

[build-dependencies]
rust-grpc-web = { git = "https://github.com/elliptic-email/rust-grpc-web" }
