[package]
name = "database-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = [ "full" ] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = [ "postgres" ] }
dotenv = "0.15.0"
