[package]
name = "database_layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
anyhow = "1.0"
diesel = { version = "1.4.4", features = [ "postgres", "r2d2" ] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = [ "serde" ] }
tokio = { version = "1.15.0", features = [ "full" ] }
