[package]
name = "ws_layer"
version = "0.1.0"
edition = "2018"

[dependencies]
database_layer = { path = "../database_layer" }

anyhow = "*"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
warp = "0.3"
futures = { version = "0.3", default-features=false}
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = "0.6"
