[package]
name = "examples_and_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
#database_layer = { path = "../../database_layer" }
dotenv = "0.15.0"
ws_layer = { path = "../../ws_layer" }
tokio = { version = "1.15.0", features = [ "full" ] }
futures = "*"
